improve file path handling